--- a/Front/my-front/package.json
+++ b/Front/my-front/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "date-fns": "^2.30.0",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
