--- a/Front/my-front/package.json
+++ b/Front/my-front/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@mui/styles": "^5.14.13",
     "@mui/x-charts": "^6.0.0-alpha.14",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
