--- a/Front/my-front/package.json
+++ b/Front/my-front/package.json
@@ -7,7 +7,9 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/base": "^5.0.0-beta.19",
     "@mui/icons-material": "^5.14.12",
+    "@mui/lab": "^5.0.0-alpha.148",
     "@mui/material": "^5.14.12",
     "@mui/styles": "^5.14.13",
     "@mui/x-charts": "^6.0.0-alpha.14",
