--- a/Front/my-front/package.json
+++ b/Front/my-front/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.14.12",
     "@mui/styles": "^5.14.13",
     "@mui/x-charts": "^6.0.0-alpha.14",
+    "@mui/x-date-pickers": "^6.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "bootstrap-icons": "^1.10.5",
     "chart.js": "latest",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
